# sezapi

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sez_client.py  test_api.py  test_auth_check.py  test_auth_check2.py  test_dej_zasilku.py  test_dej_zasilku_bypass.py  test_dokumentace.py  test_du_debug.py  test_pytloun_du.py  test_pytloun_full.py  test_uloz_zasilku.py
deploy/: install.sh  sez-api.service
sez_api/: __init__.py  app.py  cli.py  client.py  config.py  iris_codegen.py
sez_api/templates/: index.html
templates/: index.html
tests/: test_dokumentace.py
